src/objects/Date_Calculation__mdt.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Objects__c</fullName>
        <label>ADCVD Objects</label>
        <referenceTo>ADCVD_Objects__mdt</referenceTo>
        <relationshipLabel>Date Calculations</relationshipLabel>
        <relationshipName>Date_Calculations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_1_Lookup_Field_Name__c</fullName>
        <label>Base Date Field 1 Lookup Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_1_Name__c</fullName>
        <label>Base Date Field 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_1_Object__c</fullName>
        <label>Base Date Field 1 Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_1_Type__c</fullName>
        <label>Base Date Field 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Review Opportunity Notice</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Continuation or Revocation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Deadline for Decision on how to proceed</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Initiation/Prelim</fullName>
                </value>
                <value>
                    <fullName>ITC Final</fullName>
                </value>
                <value>
                    <fullName>ITC Preliminary</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Post Litigation</fullName>
                </value>
                <value>
                    <fullName>Postponement</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Quarterly Scope</fullName>
                </value>
                <value>
                    <fullName>Rescission</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Suspension Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Date_Field_2_Lookup_Field_Name__c</fullName>
        <label>Base Date Field 2 Lookup Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_2_Name__c</fullName>
        <label>Base Date Field 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_2_Object__c</fullName>
        <label>Base Date Field 2 Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_2_Type__c</fullName>
        <label>Base Date Field 2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Review Opportunity Notice</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Continuation or Revocation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Deadline for Decision on how to proceed</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Initiation/Prelim</fullName>
                </value>
                <value>
                    <fullName>ITC Final</fullName>
                </value>
                <value>
                    <fullName>ITC Preliminary</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Post Litigation</fullName>
                </value>
                <value>
                    <fullName>Postponement</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Quarterly Scope</fullName>
                </value>
                <value>
                    <fullName>Rescission</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Suspension Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Date_Field_3_Lookup_Field_Name__c</fullName>
        <label>Base Date Field 3 Lookup Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_3_Name__c</fullName>
        <label>Base Date Field 3 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_3_Object__c</fullName>
        <label>Base Date Field 3 Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_Field_3_Type__c</fullName>
        <label>Base Date Field 3 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Review Opportunity Notice</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Continuation or Revocation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Deadline for Decision on how to proceed</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Initiation/Prelim</fullName>
                </value>
                <value>
                    <fullName>ITC Final</fullName>
                </value>
                <value>
                    <fullName>ITC Preliminary</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Post Litigation</fullName>
                </value>
                <value>
                    <fullName>Postponement</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Quarterly Scope</fullName>
                </value>
                <value>
                    <fullName>Rescission</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Suspension Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Date_Field_Name__c</fullName>
        <label>Calculated Date Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_10_Name__c</fullName>
        <label>Conditional Field 10 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_10_Operator__c</fullName>
        <label>Conditional Field 10 Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equals To</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than Or Equals To</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equals To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_10_Result__c</fullName>
        <label>Conditional Field 10 Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skip</fullName>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Use Date 1</fullName>
                </value>
                <value>
                    <fullName>Use Date 2</fullName>
                </value>
                <value>
                    <fullName>Use Date 3</fullName>
                </value>
                <value>
                    <fullName>Use Date 4</fullName>
                </value>
                <value>
                    <fullName>Use Date 5</fullName>
                </value>
                <value>
                    <fullName>Use Constant 1</fullName>
                </value>
                <value>
                    <fullName>Use Constant 2</fullName>
                </value>
                <value>
                    <fullName>Use Constant 3</fullName>
                </value>
                <value>
                    <fullName>Use Constant 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_10_Value__c</fullName>
        <label>Conditional Field 10 Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_1_Name__c</fullName>
        <label>Conditional Field 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_1_Operator__c</fullName>
        <label>Conditional Field 1 Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equals To</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than Or Equals To</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equals To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_1_Result__c</fullName>
        <label>Conditional Field 1 Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skip</fullName>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Use Date 1</fullName>
                </value>
                <value>
                    <fullName>Use Date 2</fullName>
                </value>
                <value>
                    <fullName>Use Date 3</fullName>
                </value>
                <value>
                    <fullName>Use Date 4</fullName>
                </value>
                <value>
                    <fullName>Use Date 5</fullName>
                </value>
                <value>
                    <fullName>Use Constant 1</fullName>
                </value>
                <value>
                    <fullName>Use Constant 2</fullName>
                </value>
                <value>
                    <fullName>Use Constant 3</fullName>
                </value>
                <value>
                    <fullName>Use Constant 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_1_Value__c</fullName>
        <label>Conditional Field 1 Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_2_Name__c</fullName>
        <label>Conditional Field 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Field_2_Operator__c</fullName>
        <label>Conditional Field 2 Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equals To</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than Or Equals To</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equals To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_2_Result__c</fullName>
        <label>Conditional Field 2 Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skip</fullName>
                </value>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Use Date 1</fullName>
                </value>
                <value>
                    <fullName>Use Date 2</fullName>
                </value>
                <value>
                    <fullName>Use Date 3</fullName>
                </value>
                <value>
                    <fullName>Use Date 4</fullName>
                </value>
                <value>
                    <fullName>Use Date 5</fullName>
                </value>
                <value>
                    <fullName>Use Constant 1</fullName>
                </value>
                <value>
                    <fullName>Use Constant 2</fullName>
                </value>
                <value>
                    <fullName>Use Constant 3</fullName>
                </value>
                <value>
                    <fullName>Use Constant 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Field_2_Value__c</fullName>
        <label>Conditional Field 2 Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant_1__c</fullName>
        <label>Constant 1</label>
        <referenceTo>Constant__mdt</referenceTo>
        <relationshipLabel>Date Calculations</relationshipLabel>
        <relationshipName>Date_Calculations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Constant_2__c</fullName>
        <label>Constant 2</label>
        <referenceTo>Constant__mdt</referenceTo>
        <relationshipLabel>Date Calculations (Constant 2)</relationshipLabel>
        <relationshipName>Date_Calculations1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Constant_3__c</fullName>
        <label>Constant 3</label>
        <referenceTo>Constant__mdt</referenceTo>
        <relationshipLabel>Date Calculations (Constant 3)</relationshipLabel>
        <relationshipName>Date_Calculations2</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Extension_Field_1_Name__c</fullName>
        <label>Extension Field 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Deadline_Field_Level__c</fullName>
        <label>Next Deadline Field Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next_Major_AS_DAS_Deadline_and_Timeline__c</fullName>
                </value>
                <value>
                    <fullName>Next_Due_to_DAS_Deadline_and_Timeline__c</fullName>
                </value>
                <value>
                    <fullName>Next_Office_PM_Deadline_and_Timeline__c</fullName>
                </value>
                <value>
                    <fullName>Next_Announcement_Date__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Deadline_Order__c</fullName>
        <label>Next Deadline Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Base_Date_Fields__c</fullName>
        <label>Number of Base Date Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Conditionals__c</fullName>
        <label>Number of Conditionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Constants__c</fullName>
        <label>Number of Constants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Extensions__c</fullName>
        <label>Number of Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_of_Execution__c</fullName>
        <label>Order of Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Date Calculation</label>
    <pluralLabel>Date Calculations</pluralLabel>
</CustomObject>